# FlowForge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: default_debug_shader.vert  default_material_shader.frag  default_material_shader.vert  default_simple_shader.vert
examples/: CMakeLists.txt
examples/debug_demo/: CMakeLists.txt  main.cpp
examples/imgui_demo/: CMakeLists.txt  main.cpp
examples/multiwindow_demo/: CMakeLists.txt  main.cpp
examples/mutable_texture_demo/: CMakeLists.txt  main.cpp
examples/simple_square/: CMakeLists.txt  main.cpp
examples/texture_demo/: CMakeLists.txt  main.cpp
include/: flowforge.hpp
src/: CMakeLists.txt  default_shaders.hpp  flowforge.hpp  pch.hpp
src/input/: keyboard_controller.cpp  keyboard_controller.hpp
src/logging/: logger.cpp
src/math/: camera.cpp  camera.hpp  transform.cpp  transform.hpp
src/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  debug_messenger.cpp  debug_messenger.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  display_context.cpp  display_context.hpp  fence.cpp  fence.hpp  frame_buffer.cpp  frame_buffer.hpp  handle.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  render_loop.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  vulkan_context.cpp  vulkan_context.hpp  window.cpp  window.hpp
src/vulkan/resource/: im_gui_texture.cpp  im_gui_texture.hpp  model_manager.cpp  model_manager.hpp  mutable_texture.cpp  mutable_texture.hpp  static_texture.cpp  static_texture.hpp  texture.cpp  texture.hpp
src/vulkan/shader/: pipeline.cpp  pipeline.hpp  shader_stage.cpp  shader_stage.hpp  vertex.hpp
src/vulkan/shader/default/: debug_shader.cpp  debug_shader.hpp  imgui_shader.cpp  imgui_shader.hpp  material_object_types.inl  material_shader.cpp  material_shader.hpp  simple_shader.cpp  simple_shader.hpp
src/vulkan/util/: constants.hpp  status_optional.hpp
